src/validation/tests/snapshots/rusty__validation__tests__variable_validation_tests__unresolvable_variables_are_reported.snap
---
source: src/validation/tests/variable_validation_tests.rs
expression: "&diagnostics"
---
error: Unresolved constant 'cx' variable
   ┌─ <internal>:19:29
   │
19 │                 cx : INT := cx;  //unresolvable
   │                             ^^ Unresolved constant 'cx' variable

error: Could not resolve reference to a
   ┌─ <internal>:21:30
   │
21 │                 cai : INT := a;  //unresolvable
   │                              ^ Could not resolve reference to a

error: Unresolved constant 'cai' variable
   ┌─ <internal>:21:30
   │
21 │                 cai : INT := a;  //unresolvable
   │                              ^ Unresolved constant 'cai' variable


